Remove inherited dependencies in favour of dependency management.
Reality is - new UI needs node stack to build results and javax.servlet to host it.
There is no need for much more since quite a lot of work is done in core REST layer.

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <groupId>org.opensmarthouse</groupId>
     <artifactId>parent</artifactId>
     <version>0.9.1-SNAPSHOT</version>
+    <relativePath/>
   </parent>
 
   <groupId>org.opensmarthouse.ui</groupId>
@@ -83,6 +84,25 @@
       <url>https://dl.bintray.com/opensmarthouse/maven</url>
     </repository>
   </repositories>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.opensmarthouse.core.bom</groupId>
+        <artifactId>opensmarthouse</artifactId>
+        <version>${project.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.opensmarthouse.core.bom</groupId>
+        <artifactId>opensmarthouse-dependencies</artifactId>
+        <version>${project.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <build>
     <pluginManagement>
