--- a/bundles/org.opensmarthouse.ui/pom.xml
+++ b/bundles/org.opensmarthouse.ui/pom.xml
@@ -37,6 +37,11 @@
       <artifactId>org.opensmarthouse.core.ui</artifactId>
       <version>0.9.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
