--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,9 +10,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+
     - name: Build with Maven
       run: mvn package
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
