--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,10 +11,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up JDK 11.x
+    - name: Set up JDK 11.0.6
       uses: actions/setup-java@v1
       with:
-        java-version: 11.x
+        java-version: 11.0.6
 
     - name: Build with Maven
       run: mvn package
