--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
     <repository>
       <id>github</id>
       <name>OpenSmartHouse Maven Repository on GitHub</name>
-      <url>https://maven.pkg.github.com/opensmarthouse</url>
+      <url>https://maven.pkg.github.com/opensmarthouse/*</url>
     </repository>
     <repository>
       <id>bintray-opensmarthouse-maven</id>
