--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,4 +18,4 @@ jobs:
 
     - run: mvn clean install --no-transfer-progress
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        GITHUB_TOKEN: ${{ secrets.READ_PACKAGES_TOKEN }}
