Update bnd to 5.2.0 (#790)
See: https://github.com/bndtools/bnd/wiki/Changes-in-5.2.0

Signed-off-by: Wouter Born <github@maindrain.net>
Signed-off-by: Łukasz Dywicki <luke@code-house.org>
X-Backport-Id: e270d759ca8eb83f5cafb30ffc7b7715c7a7a7e4

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,7 @@ Import-Package: \\
   !*.internal.*,\\
   !*.impl.*, \\
   org.openhab.*
+-noimportjava: true
 -sources: false
 -contract: *
 -includeresource: -${.}/NOTICE, -${.}/*.xsd]]></bnd>
