--- a/bundles/org.opensmarthouse.ui/web/package.json
+++ b/bundles/org.opensmarthouse.ui/web/package.json
@@ -61,6 +61,7 @@
     "dayjs": "^1.9.6",
     "dom7": "^2.1.5",
     "echarts": "^4.9.0",
+    "event-source-polyfill": "^1.0.22",
     "expression-eval": "^2.1.0",
     "framework7": "^5.7.12",
     "framework7-icons": "^3.0.1",
@@ -119,6 +120,7 @@
     "eslint-loader": "^2.2.1",
     "eslint-plugin-vue": "^5.2.3",
     "file-loader": "^3.0.1",
+    "global-prefix": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "jest-serializer-vue": "^2.0.2",
@@ -130,6 +132,7 @@
     "ora": "^3.4.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
+    "resolve-dir": "^1.0.1",
     "rimraf": "^2.7.1",
     "standard": "^12.0.1",
     "strip-ansi": "=3.0.1",
@@ -139,12 +142,11 @@
     "swagger-ui-dist": "^3.32.5",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^1.1.2",
-    "vue-jest": "^3.0.6",
     "vue-loader": "^15.9.3",
     "vue-masonry-css": "^1.0.3",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.44.1",
+    "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
