--- a/features/pom.xml
+++ b/features/pom.xml
@@ -28,7 +28,47 @@
   </dependencies>
 
   <build>
+    <resources>
+      <resource>
+        <targetPath>${project.build.directory}/feature</targetPath>
+        <filtering>true</filtering>
+        <directory>${project.basedir}/src/main/feature</directory>
+      </resource>
+    </resources>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>resources</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-artifacts</id>
+            <goals>
+              <goal>attach-artifact</goal>
+            </goals>
+            <phase>package</phase>
+            <configuration>
+              <artifacts>
+                <artifact>
+                  <file>${project.build.directory}/feature/feature.xml</file>
+                  <type>xml</type>
+                  <classifier>features</classifier>
+                </artifact>
+              </artifacts>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.apache.karaf.tooling</groupId>
         <artifactId>karaf-maven-plugin</artifactId>
@@ -42,6 +82,14 @@
           <logDependencyChanges>true</logDependencyChanges>
           <overwriteChangedDependencies>true</overwriteChangedDependencies>
         </configuration>
+        <executions>
+          <execution>
+            <id>karaf-feature-verification</id>
+            <goals>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
